# arche-2-baserow

./: README.md  pyproject.toml
.github/workflows/: create_arche_ttl.yml  update_baserow.yml
scripts/: arche2baserow.py  baserow_dump.py  config.py  template.py
scripts/utils/: arche.py  baserow.py
